# effect_analysis

./: ANormalAst.hs  ArelOfSQL.hs  Exp.hs  Main.hs  Makefile  SpecLang.hs  TyEnv.hs  parser.hs  rfParser.hs
EffectAnalysis/: ANormalAST.hs  ArelOfSQL.hs  EffectAnalysis.cabal  Exp.hs  LICENSE  Main.hs  Parser.hs  TCMonad.hs  TyEnv.hs
EffectAnalysis/SQLParser/: PGSqlParser.hs
EffectAnalysis/SpecLang/: Arel.hs  BasePredicate.hs  Effect.hs  RefinementType.hs  RelPredicate.hs  TypeRefinement.hs
SQLParser/: PGSqlParser.hi
SpecLang/: Arel.hs  BasePredicate.hs  Effect.hs  RelPredicate.hs  TypeRefinement.hs
experiments/: gfdu.z3  gfdu2.z3
testcases/: test1.txt  test4.txt  test9.txt
